# MFTT-RISCV

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  flash-os-bin.sh  gdb.txt  view-stack-usage.sh
header/: stddef.h  sys_structs.h  syscall_nums.h  types.h
init/: init.c  package.S
kernel/: kernel-k210.ld  kernel-qemu.ld  kernel.ld
kernel/dev/: buffered_io.c  dev.c
kernel/dev/k210/: dmac.h  fpioa.h  gpiohs.h  memmaps.h  spi.h  sysctl.h  utils.h
kernel/dev/k210/fpioa/: fpioa.c
kernel/dev/k210/src/: dmac.c  enable_all_memory.c  fpioa.c  gpiohs.c  memmaps.c  sdcard.c  spi.c  sysctl.c
kernel/dev/pipe/: pipe.c
kernel/dev/tty/: console_sbi.c  kconsole.c
kernel/dev/virtio/: virtio.h  virtio_disk.c  virtio_mmio.c
kernel/driver/: SBI.c  console.c  dev.c
kernel/fs/: vfs.c
kernel/fs/fatfs/: fatfs.c  fatfs.h  fatfs_impl_omochaos.c
kernel/header/: configs.h  dev.h  environment.h  memory.h  proc.h  riscv.h  scheduler.h  smp_barrier.h  syscall.h  trap.h  vfs.h
kernel/header/common/: types.h
kernel/header/dev/: buffered_io.h  dev.h  pipe.h
kernel/header/driver/: SBI.h  console.h
kernel/header/lib/: bitset.h  elf.h  linklist.h  queue.h  rb_tree.h  stdlib.h  string.h
kernel/header/lib/sys/: SBI.h  fdt.h  sleeplock.h  spinlock.h
kernel/interrupt/: interrupt.c  plic.c  plic.h  supervisor_trap.c  switch.S  timer.c  trap.S  trap.c  user_trap.c  utils.h  yield.c
kernel/lib/: elf.c  rb_tree.c  stdlib.c  string.c
kernel/lib/sys/: SBI.c  sleeplock.c  spinlock.c
kernel/lib/sys/fdt/: fdt.c  libfdt.c  libfdt.h
kernel/memory/: buddy.c  kmem.c  memory.c  paging.c  usercopy.c  utils.h
kernel/proc/: brk.c  execve.c  exit.c  fork.c  proc.c  sleep.c
kernel/scheduler/: scheduler.c
kernel/startup/: environment.c  startup.S  startup.c
kernel/syscall/: syscalls.c  test.c
kernel/trap/: interrupt.c  supervisor_trap.c  switch.S  timer.c  trap.S  trap.c  user_trap.c  yield.c
kernel/vfs/: vfs.c
ktest/: package.S  prog1.c  prog2.c  prog3.c
progs/: TODO  prog1.c
tools/fs_contents/: LongFileNameTest.txt  brk  chdir  clone  close  dup  dup2  execve  exit  fork  fstat  getcwd  getdents  getpid  getppid  gettimeofday  hello.txt  mkdir_  mmap  mount  munmap  open  openat  pipe  read  sleep  test_echo  times  umount  uname  unlink  wait  waitpid  write  yield  yield_A  yield_B  yield_C
tools/scripts/: img_utils  openocd_k210.cfg
userlib/: runtime.c  stdio.c  stdlib.c  string.c  syscall.c
userlib/header/: stdio.h  stdlib.h  syscall.h
