# Project MyFirstTouchToRISCV
# If I could run a hello world at today (4/18) this project may be continue
CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)

SET(CMAKE_SYSTEM_NAME Generic)
SET(CMAKE_SYSTEM_PROCESSOR RV64)
SET(CMAKE_EXECUTABLE_SUFFIX ".elf")

# Find cross compiler for RISCV64
FIND_PROGRAM(RISCV_C_COMPILER "riscv64-elf-gcc")
message("What: ${RISCV_C_COMPILER}")

if (EXISTS "${RISCV_C_COMPILER}")
    SET(RISCV_TOOLCHAIN_PREFIX "riscv64-elf-")
ELSE ()
    MESSAGE(FATAL_ERROR "Cannot found RISC-V Toolchain.")
ENDIF ()

MESSAGE("Found RISC-V Toolchain prefix: ${RISCV_TOOLCHAIN_PREFIX}")

SET(CMAKE_ASM_COMPILER ${RISCV_TOOLCHAIN_PREFIX}gcc)
SET(CMAKE_C_COMPILER ${RISCV_TOOLCHAIN_PREFIX}gcc)
SET(CMAKE_CXX_COMPILER ${RISCV_TOOLCHAIN_PREFIX}g++)
SET(CMAKE_AR ${RISCV_TOOLCHAIN_PREFIX}ar)
SET(CMAKE_RANLIB ${RISCV_TOOLCHAIN_PREFIX}ranlib)
SET(CMAKE_OBJCOPY ${RISCV_TOOLCHAIN_PREFIX}objcopy)
SET(CMAKE_OBJDUMP ${RISCV_TOOLCHAIN_PREFIX}objdump)
# Disable compiler check for cross-compiler.
SET(CMAKE_C_COMPILER_WORKS TRUE)
SET(CMAKE_CXX_COMPILER_WORKS TRUE)
SET(CMAKE_TRY_COMPILE_TARGET_TYPE STATIC_LIBRARY)
# Enable asm
ENABLE_LANGUAGE(ASM)

SET(CMAKE_C_FLAGS "-fno-pic -nostdinc -static -fno-builtin -fno-strict-aliasing -fno-stack-protector -g -nostdlib -mcmodel=medany")

PROJECT(MyFirstTouchToRISCV)
SET(CMAKE_VERBOSE_MAKEFILE ON)

FILE(GLOB_RECURSE ASM_SRCS "kernel/*/*.S")
FILE(GLOB_RECURSE C_SRCS "kernel/*/*.c")

FOREACH (SRC IN ITEMS ${ASM_SRCS})
    SET_SOURCE_FILES_PROPERTIES(${SRC} PROPERTIES COMPILE_DEFINITIONS ASM_FILE)
ENDFOREACH ()

# Import Third-party library libfdt
SET(SRCS ${ASM_SRCS} ${C_SRCS})

# Test Proc Load
ADD_EXECUTABLE(prog1.elf ktest/prog1.c)
ADD_EXECUTABLE(prog2.elf ktest/prog2.c)
ADD_EXECUTABLE(prog3.elf ktest/prog3.c)
SET(TEST_CFLAG "-Wall -Werror -O -fno-omit-frame-pointer "
        "-ggdb -g -MD -mcmodel=medany -ffreestanding -fno-common -nostdlib "
        "-mno-relax -fno-stack-protector")
SET(TEST_LDFLAG "-z max-page-size=4096 -N -e main -Ttext 0")
STRING(REPLACE " " ";" TEST_CFLAG ${TEST_CFLAG})
STRING(REPLACE " " ";" TEST_LDFLAG ${TEST_LDFLAG})

TARGET_COMPILE_OPTIONS(prog1.elf PRIVATE ${TEST_CFLAG})
TARGET_LINK_OPTIONS(prog1.elf PRIVATE ${TEST_LDFLAG})
TARGET_COMPILE_OPTIONS(prog2.elf PRIVATE ${TEST_CFLAG})
TARGET_LINK_OPTIONS(prog2.elf PRIVATE ${TEST_LDFLAG})
TARGET_COMPILE_OPTIONS(prog3.elf PRIVATE ${TEST_CFLAG})
TARGET_LINK_OPTIONS(prog3.elf PRIVATE ${TEST_LDFLAG})

IF (0)
    ADD_CUSTOM_COMMAND(TARGET prog1.elf POST_BUILD COMMAND ${CMAKE_OBJCOPY} -S -O binary ${CMAKE_BINARY_DIR}/prog1.elf ${CMAKE_BINARY_DIR}/prog1.bin)
    ADD_CUSTOM_COMMAND(TARGET prog2.elf POST_BUILD COMMAND ${CMAKE_OBJCOPY} -S -O binary ${CMAKE_BINARY_DIR}/prog2.elf ${CMAKE_BINARY_DIR}/prog2.bin)
    ADD_CUSTOM_COMMAND(TARGET prog3.elf POST_BUILD COMMAND ${CMAKE_OBJCOPY} -S -O binary ${CMAKE_BINARY_DIR}/prog3.elf ${CMAKE_BINARY_DIR}/prog3.bin)
ENDIF (0)

ADD_LIBRARY(test OBJECT ktest/package.S)
SET_SOURCE_FILES_PROPERTIES(ktest/package.S PROPERTIES LANGUAGE ASM)
TARGET_COMPILE_DEFINITIONS(test PRIVATE PROG1="${CMAKE_BINARY_DIR}/prog1.elf" PROG2="${CMAKE_BINARY_DIR}/prog2.elf" PROG3="${CMAKE_BINARY_DIR}/prog3.elf")
ADD_DEPENDENCIES(test prog1.elf prog2.elf prog3.elf)
# End of test

# Generate kernel.elf
ADD_EXECUTABLE(kernel.elf ${SRCS})
TARGET_INCLUDE_DIRECTORIES(kernel.elf PRIVATE "kernel/header")
SET_TARGET_PROPERTIES(kernel.elf PROPERTIES LINK_FLAGS "-N -T${CMAKE_SOURCE_DIR}/kernel/kernel.ld ")
TARGET_LINK_LIBRARIES(kernel.elf test)
ADD_CUSTOM_COMMAND(TARGET kernel.elf
        POST_BUILD
        COMMAND ${CMAKE_OBJDUMP} -S ${CMAKE_BINARY_DIR}/kernel.elf > ${CMAKE_BINARY_DIR}/kernel.disasm)
# End of kernel.elf